--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 theme: jekyll-theme-minimal
-title: [Kaan Karaman]
+title: [Kaan Karaman](https://scholar.google.com.tr/citations?user=YRAqNuMAAAAJ&hl=en)
 logo: KaanKaraman.jpg
+description: [Twitter](https://twitter.com/_KaanKaraman) [Scholar](https://scholar.google.com.tr/citations?user=YRAqNuMAAAAJ&hl=en)
