--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-minimal
 title: Kaan Karaman
 logo: KaanKaraman.jpg
-google_analytics: G-QM62X7YW01
+google_analytics: UA-192343744-1
